# aoc

./: .gitignore  README.md
2018/d01/: Cargo.toml  puzzle.md
2018/d02/: Cargo.toml  puzzle.md
2018/d04/: Cargo.toml
2018/d07/: Cargo.toml
2018/d11/: puzzle.md
2018/d13/: Cargo.toml
2018/d14/: puzzle.md
2019/: README.md  Untitled.ipynb  advent.nim  astar.md  day01.py  day01_a.nim  day01_b.md  day01_b.nim  day01_b.py  day02_a.md  day02_a.nim  day02_b.md  day02_b.nim  day03_a.md  day03_a.nim  day03_b.md  day03_b.nim  day04_a.md  day04_a.nim  day04_b.md  day04_b.nim  day05_a.md  day05_a.nim  day05_b.md  day05_b.nim  day06_a.md  day06_a.nim  day06_b.md  day06_b.nim  day07_a.md  day07_a.nim  day07_b.md  day07_b.nim  day08_a.md  day08_a.nim  day08_b.md  day08_b.nim  day09_a.md  day09_a.nim  day09_b.md  (+33 more)
2019/d01/: puzzle.md
2019/d02/: puzzle.md
2019/d03/: puzzle.md
2019/d04/: puzzle.md
2019/d05/: puzzle.md
2019/d06/: puzzle.md
2019/d07/: puzzle.md
2019/d08/: puzzle.md
2019/d09/: puzzle.md
2019/d10/: puzzle.md
2019/d11/: puzzle.md
2019/d12/: puzzle.md
2019/d13/: puzzle.md
2019/d14/: puzzle.md
2019/d15/: puzzle.md
2019/d16/: puzzle.md
2020/d01/: puzzle.md
2020/d02/: Cargo.toml  puzzle.md
2020/d03/: Cargo.toml  puzzle.md
2020/d08/: Cargo.toml  puzzle.md
2020/d08/src/: main.rs
2022/d11/: Cargo.toml  primes.py  puzzle.md
2022/d11/src/: main.rs
2024/d03/: Cargo.toml  puzzle.md
2024/d03/src/: main.rs
aoc-template/: Cargo.toml  cargo-generate.toml
d01/: p.py
d04/: Cargo.toml
d05/: Cargo.toml
d07/: Cargo.toml
(+353 files in other folders)
