[package]
name = "d08"
version = "0.1.0"
authors = ["Attila Babo <attila.babo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"

[dev-dependencies]
pretty_assertions = "0.6.1"