[package]
name = "d11"
version = "0.1.0"
authors = ["Attila Babo <attila.babo@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "*"
num-bigint = "0.4.3"

[dev-dependencies]
pretty_assertions = "1.0.0"
