[package]
name = "d03"
version = "0.1.0"
authors = ["Attila Babo <attila.babo@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
regex = "1.11.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
